added unit test case for INCR and BF

--- a/SP_Metric_Opt/CMakeLists.txt
+++ b/SP_Metric_Opt/CMakeLists.txt
@@ -27,8 +27,11 @@ find_package(yaml-cpp 0.5.2 REQUIRED)
 include_directories(${Boost_INCLUDE_DIR})
 include_directories(includeMoe)
 include_directories(/usr/local/lib)
-include_directories(/mnt/d/robotics_research/ORB_SLAM2/include)
-include_directories(/mnt/d/robotics_research/ORB_SLAM2)
+#include_directories(/mnt/d/robotics_research/ORB_SLAM2/include)
+#include_directories(/mnt/d/robotics_research/ORB_SLAM2)
+include_directories(/mnt/f/explore/ROS2-SP-APPs/ORB_SLAM2/include)
+include_directories(/mnt/f/explore/ROS2-SP-APPs/ORB_SLAM2)
+
 # file(GLOB sources "sources/*.cpp" "sources/*.h")
 file(GLOB_RECURSE sources "sources/*.cpp" "sources/*.h")
 set(CONVENIENCE_LIB_NAME ${PROJECT_NAME})
