--- a/SP_Metric_Opt/CMakeLists.txt
+++ b/SP_Metric_Opt/CMakeLists.txt
@@ -29,8 +29,8 @@ include_directories(includeMoe)
 include_directories(/usr/local/lib)
 #include_directories(/mnt/d/robotics_research/ORB_SLAM2/include)
 #include_directories(/mnt/d/robotics_research/ORB_SLAM2)
-include_directories(/mnt/f/explore/ROS2-SP-APPs/ORB_SLAM2/include)
-include_directories(/mnt/f/explore/ROS2-SP-APPs/ORB_SLAM2)
+include_directories(~/208_share/ROS2-SP-APPs/ORB_SLAM2/include)
+include_directories(~/208_share/ROS2-SP-APPs/ORB_SLAM2)
 
 # file(GLOB sources "sources/*.cpp" "sources/*.h")
 file(GLOB_RECURSE sources "sources/*.cpp" "sources/*.h")
